# BitChess

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/bitchess/: CMakeLists.txt  bitchess.cpp  bitchess.h  board.cpp  board.h  coordinate.cpp  coordinate.h  move.cpp  move.h  movelist.cpp  movelist.h  piece.h
test/: CMakeLists.txt  main.cpp  test-board.cpp  test-coordinate.cpp  test-move.cpp  tests.h
test/src/: bitchess_test.cpp
